--- a/.github/workflows/TestPullRequest.yml
+++ b/.github/workflows/TestPullRequest.yml
@@ -10,13 +10,12 @@ on:
 jobs:        
   CreatePullRequest:
     runs-on: ubuntu-latest
-    needs: updateAnyFiles
     if: ${{ needs.updateTags.outputs.isUpdated }}
     steps:
       - uses: actions/checkout@v2
       - name: Add random file
-        run: |
-        ls -al > log.txt
+        run: ls -al > log.txt;
+        
       - name: Create Pull Request When log.txt being added
         uses: peter-evans/create-pull-request@v3
         with:
